style the header to prevent vertical overflow

--- a/JobCompass/client/src/components/HomePage/HomePageComponent.scss
+++ b/JobCompass/client/src/components/HomePage/HomePageComponent.scss
@@ -12,6 +12,12 @@
   }
 
   &__header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    background-color: white;
     display: flex;
     width: 100%;
     text-align: center;
@@ -21,11 +27,22 @@
 
     &__signIn-cta,
     &__register-cta {
-      max-width: 10%;
-      margin-left: 1rem;
-      border-radius: 0.25rem;
-      font-weight: 500;
-      text-decoration: none;
+      display: none;
+
+      @include tablet {
+        display: flex;
+        font-size: 0.75rem;
+        max-width: 10%;
+        margin-left: 1rem;
+        border-radius: 0.25rem;
+        font-weight: 500;
+        text-decoration: none;
+        font-size: 0.75rem;
+      }
+
+      @include desktop {
+        font-size: 1rem;
+      }
     }
 
     &__signIn-cta {
@@ -48,16 +65,22 @@
       font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
       flex: 1;
-      font-size: 1.75rem;
+      font-size: 0.75rem;
       font-weight: 700;
       color: #2557a7;
       letter-spacing: -0.5008px;
       margin: 0;
       display: flex;
       align-items: center;
+      font-size: 0.5rem;
 
       a {
         flex-direction: row;
+        gap: 0rem;
+
+        @include tablet {
+          gap: 1rem;
+        }
       }
 
       &__image {
@@ -84,7 +107,7 @@
 .heroPage {
   @include flex-left;
   align-items: center;
-  padding: 3rem 1rem;
+  padding: 6rem 1rem;
   gap: 1.5rem;
   width: 100%;
 
